@@ -3,17 +3,25 @@ aiosignal==1.3.1
 asgiref==3.6.0
 async-timeout==4.0.2
 attrs==23.1.0
+blis==0.7.9
+catalogue==2.0.8
 certifi==2023.5.7
 charset-normalizer==3.1.0
+click==8.1.3
 colorama==0.4.6
+confection==0.0.4
 coreapi==2.3.3
 coreschema==0.0.4
+cymem==2.0.7
 Django==4.2
 django-cors-headers==3.14.0
+django-email-users==1.1.0
 django-rest-framework==0.1.0
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
 drf-yasg==1.21.5
+easy-colors==0.0.1
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl#sha256=0964370218b7e1672a30ac50d72cdc6b16f7c867496f1d60925691188f4d2510
 frozenlist==1.3.3
 gunicorn==20.1.0
 idna==3.4
@@ -21,13 +29,18 @@ inflection==0.5.1
 itypes==1.2.0
 Jinja2==3.1.2
 joblib==1.2.0
+langcodes==3.3.0
 MarkupSafe==2.1.2
 multidict==6.0.4
+murmurhash==1.0.9
 mysqlclient==2.1.1
 numpy==1.24.3
 openai==0.27.7
 openapi-codec==1.3.2
 packaging==23.1
+pathy==0.10.1
+preshed==3.0.8
+pydantic==1.10.9
 PyJWT==2.6.0
 pytz==2023.3
 requests==2.30.0
@@ -35,11 +48,22 @@ ruamel.yaml==0.17.26
 ruamel.yaml.clib==0.2.7
 scikit-learn==1.2.2
 scipy==1.10.1
+send-mail==0.0.2
+shortuuid==1.0.11
 simplejson==3.19.1
+smart-open==6.3.0
+spacy==3.5.3
+spacy-legacy==3.0.12
+spacy-loggers==1.0.4
 sqlparse==0.4.3
+srsly==2.4.6
+thinc==8.1.10
 threadpoolctl==3.1.0
 tqdm==4.65.0
+typer==0.7.0
+typing_extensions==4.6.3
 tzdata==2023.3
 uritemplate==4.1.1
 urllib3==2.0.2
+wasabi==1.1.2
 yarl==1.9.2
