@@ -1,0 +1,25 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <style>
+        strong{
+    color: green;
+    }
+
+        b{
+            color: red;
+        }
+    </style>
+
+</head>
+<body>
+    <h1>Password Reset Verification Code</h1>
+    <p>Dear User,</p>
+    <p style="font-weight: bold">Your password reset verification code is:</p>
+    <p><strong>{{ token }}</strong></p>
+    <p>This code will expire after <b> 15 minutes</b>. Please use it within the specified time.</p>
+    <p>If you did not request a password reset, you can safely ignore this email.</p>
+    <p>Best regards,</p>
+    <p>Grievance Management System Team</p>
+</body>
+</html>
