@@ -1,0 +1,18 @@
+# Generated by Django 4.2 on 2023-06-19 11:10
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('users', '0003_passwordresettoken'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='passwordresettoken',
+            name='expires_at',
+            field=models.DateTimeField(auto_now_add=True),
+        ),
+    ]
