@@ -1,0 +1,18 @@
+# Generated by Django 4.2 on 2023-06-19 11:14
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('users', '0004_alter_passwordresettoken_expires_at'),
+    ]
+
+    operations = [
+        migrations.AlterField(
+            model_name='passwordresettoken',
+            name='expires_at',
+            field=models.DateTimeField(),
+        ),
+    ]
