@@ -1,5 +1,7 @@
+from django.contrib.auth import get_user_model
 from django.db import models
 from django.contrib.auth.models import AbstractUser
+from django.utils import timezone
 
 
 class User(AbstractUser):
@@ -15,3 +17,17 @@ class User(AbstractUser):
     REQUIRED_FIELDS = []
 
 
+User = get_user_model()
+
+
+class PasswordResetToken(models.Model):
+    user = models.ForeignKey(User, on_delete=models.CASCADE)
+    token = models.CharField(max_length=255)
+    expires_at = models.DateTimeField()
+
+    def __str__(self):
+        return f"PasswordResetToken for {self.user.email}"
+
+    def is_expired(self):
+        now = timezone.localtime(timezone.now()).replace(tzinfo=None)
+        return self.expires_at < now
