@@ -1,12 +1,21 @@
 import datetime
+import uuid
+
 import jwt
+from django.utils import timezone
 from rest_framework import status
 from rest_framework.exceptions import AuthenticationFailed
 from rest_framework.response import Response
 from rest_framework.views import APIView
-
-from .models import User
+from django.core.mail import send_mail
+from django.conf import settings
+from .models import User, PasswordResetToken
 from .serializers import UserSerializers
+import random
+from django.contrib.auth import get_user_model
+from django.core.mail import EmailMultiAlternatives
+from django.template.loader import render_to_string
+from django.utils.html import strip_tags
 
 
 class Register(APIView):
@@ -285,4 +294,79 @@ class TotalUsers(APIView):
         serializer = UserSerializers(users, many=True)
 
         return Response(serializer.data)
+
+
+class ForgotPassword(APIView):
+    def post(self, request):
+        email = request.data.get('email')
+
+        try:
+            # Check if the user exists and is valid
+            user = User.objects.get(email=email, is_active=True)
+        except User.DoesNotExist:
+            # If the user does not exist or is not valid, return an error response
+            raise AuthenticationFailed('Invalid email')
+
+        # Invalidate any existing password reset tokens for the user
+        PasswordResetToken.objects.filter(user=user).delete()
+
+        # Set the expiration time for the verification code (e.g., 15 minutes from now)
+        expiration_time = timezone.now() + timezone.timedelta(minutes=15)
+
+        # Generate a unique token for the password reset
+        token = uuid.uuid4().hex
+
+        # Create a new password reset token object
+        password_reset_token = PasswordResetToken.objects.create(user=user, token=token, expires_at=expiration_time)
+
+        # Create the email content
+        subject = 'Password Reset Verification Code'
+        html_content = render_to_string('password_reset_email.html', {'token': token, 'expires_at': expiration_time})
+        text_content = strip_tags(html_content)
+
+        # Send the email
+        email = EmailMultiAlternatives(subject, text_content, "no-reply.gms@outlook.com", [email])
+        email.attach_alternative(html_content, "text/html")
+        email.send()
+
+        # Return the API response
+        return Response({'message': 'Verification code sent successfully!'})
+
+
+class ResetPassword(APIView):
+    def post(self, request):
+        verification_code = request.data.get('verification_code')
+        email = request.data.get('email')
+        new_password = request.data.get('new_password')
+
+        # Retrieve the password reset token
+        try:
+            password_reset_token = PasswordResetToken.objects.get(user__email=email, token=verification_code)
+        except PasswordResetToken.DoesNotExist:
+            raise AuthenticationFailed('Invalid verification code')
+
+        # Check if the token has expired
+        now = timezone.localtime(timezone.now()).replace(tzinfo=None)
+        expires_at = password_reset_token.expires_at.replace(tzinfo=None)  # Convert to naive datetime
+        if expires_at < now:
+            raise AuthenticationFailed('Expired verification code')
+
+        # Get the user associated with the token
+        user = password_reset_token.user
+
+        # Update the user's password
+        user.set_password(new_password)
+        user.save()
+
+        # Delete the used token
+        password_reset_token.delete()
+
+        return Response({'message': 'Password reset successful'})
+
+
+
+
+
+
+
 
